 TODO

* Should interactiveSync and syncStack be moved to lib/ ?
* Really need to do something about all the disabled options in the
  config dialog. Some of them might make sense.

2002-08-24  Adriaan de Groot
* (syncAction.cc) Whoops, forgot to implement the timeout feature
  in interactive questionYesNo.
* One more go through all the sources removing warnings.

2002-08-23  Adriaan de Groot
* (addressWidget.cc) Added more debugging output in response to bug #45977. 
  Gosh, it's even a FreeBSD user. This basically means that the database 
  can't be opened, and I have no idea why.
* (kpilotlink.cc) Added more debugging output in KPilotLink::acceptDevice() 
  to deal with problems from Chris Cowell and Beat Straehl.
* (kpilotlink.cc) (Perhaps) check pilot-link version more gracefully.
* (pilotUser.h) bzero() new KPilotUser data structures, just in case.
* (interactiveSync.cc) Fix compile warnings.
* (knotes-action.cc) Fix bug that causes the KNotes conduit to hang 
  when KNotes isn't running.
* (everything dependent on SyncAction) Changed the type of exec() to virtual
  bool, and removed it from the slots. Added a new slot execConduit() which
  calls exec(). This makes you return a value from exec(), and false is intended
  to indicate "processing never started due to errors" and will cause execConduit()
  to generate a generic error message and emit the syncDone(this) signal, which
  is otherwise easily forgotten when just doing return;


KPilot Developer's notes for august 15th, 2002
==============================================

2002-08-15  Reinhold Kainhofer
* Implemented categories in the todo conduit
* Fixed the bug which prevented error messages from 
  being included in the hotsync log (the signals from 
  fDeviceLink were not connected!)
* Included the malconduit in the CVS tree (but disabled 
  its compilation for now), wrote several
  emails asking for permission to either relicense libmal 
  to use MPL 1.1, or to include special permission into 